correction structure export categories

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 la_maison/spiders/__pycache__
 la_maison/__pycache__
 la_maison/spiders/spider_produitsTESTTT.py
+la_maison/produits.*
+la_maison/spiders/categories.*
+*/__pycache__
+*/*/__pycache__
