--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ la_maison/spiders/categories.*
 # Ignorer tous les dossiers __pycache__, quelle que soit leur profondeur
 **/__pycache__/
 
+# Ignorer l'environnement virtuel
+.venv/
