--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
-la_maison/spiders/__pycache__
-la_maison/__pycache__
+la_maison/spiders/__pycache__*
+la_maison/__pycache__*
 la_maison/spiders/spider_produitsTESTTT.py
 la_maison/produits.*
+la_maison/categories.*
 la_maison/spiders/categories.*
 */__pycache__
 */*/__pycache__
