--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,80 @@
+altair==5.5.0
 attrs==24.2.0
 Automat==24.8.1
+blinker==1.9.0
+cachetools==5.5.0
 certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.4.0
+click==8.1.7
 constantly==23.10.4
 cryptography==44.0.0
 cssselect==1.2.0
 defusedxml==0.7.1
 filelock==3.16.1
+gitdb==4.0.11
+GitPython==3.1.43
+h11==0.14.0
 hyperlink==21.0.0
 idna==3.10
 incremental==24.7.2
 itemadapter==0.9.0
 itemloaders==1.3.2
+Jinja2==3.1.4
 jmespath==1.0.1
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
 lxml==5.3.0
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+narwhals==1.15.1
+numpy==2.1.3
+outcome==1.3.0.post0
 packaging==24.2
+pandas==2.2.3
 parsel==1.9.1
+pillow==11.0.0
 Protego==0.3.1
+protobuf==5.29.0
+pyarrow==18.1.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pycparser==2.22
+pydeck==0.9.1
 PyDispatcher==2.0.7
+Pygments==2.18.0
 pyOpenSSL==24.3.0
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
+pytz==2024.2
 queuelib==1.7.0
+referencing==0.35.1
 requests==2.32.3
 requests-file==2.1.0
+rich==13.9.4
+rpds-py==0.21.0
 Scrapy==2.12.0
+selenium==4.27.1
 service-identity==24.2.0
 setuptools==75.6.0
+six==1.16.0
+smmap==5.0.1
+sniffio==1.3.1
+sortedcontainers==2.4.0
+streamlit==1.40.2
+tenacity==9.0.0
 tldextract==5.1.3
+toml==0.10.2
+tornado==6.4.2
+trio==0.27.0
+trio-websocket==0.11.1
 Twisted==24.10.0
 typing_extensions==4.12.2
+tzdata==2024.2
 urllib3==2.2.3
 w3lib==2.2.1
-zope.interface==7.1.1
+watchdog==6.0.0
+websocket-client==1.8.0
+wsproto==1.2.0
+zope.interface==7.2
